# data-anonymizer

./: .env.example  .gitignore  ARCHITECTURE_GUIDE.md  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  launch.bat  launch.ps1  launch.sh  pyproject.toml  requirements.txt  setup.py  stop.bat  stop.ps1  stop.sh
config/: company_mapping.json
docs/: api.md
frontend/: streamlit_app.py
samples/: sample_data.csv  sample_multisheet.xlsx
scripts/: dev.py  dev_enhanced.py  start.sh
src/data_anonymizer/: __init__.py
src/data_anonymizer/api/: __init__.py  main.py
src/data_anonymizer/api/routes/: anonymizer.py
src/data_anonymizer/core/: __init__.py  anonymizer.py  config.py  security.py
src/data_anonymizer/utils/: __init__.py  data_generator.py
tests/: conftest.py  test_anonymizer.py  test_api.py  test_integration.py  test_performance.py  test_security.py
uploads/: complex_test.csv  invalid_config_test.csv  multi_sheet.xlsx  multisheet_workflow.xlsx  test.csv  test.xlsx  workflow_test.csv
